# pcl_tracking

./: .gitignore  CMakeLists.txt  README.md  camera_robot_calibrationtxt  connect_ssh.txt  package.xml
launch/: baxter_arm_mover.launch  optitrack_handler.launch  planar_segmentation.launch  run_create_model.launch  run_create_model_planar_segmentation.launch  run_tracking.launch  tracking_world.launch
launch/params/: parameters.yaml
msg/: ObjectPosition.msg
src/: auto_tracking.cpp  baxter_arm_mover.cpp  cloud_filtered.pcd  create_model.cpp  create_model_planar_segmentation.cpp  object_conversions.cpp  optitrack_conversions.cpp  optitrack_conversions2.cpp  optitrack_handler.cpp  params.yaml  planar_segmentation.cpp  quaternion.h  red_cylinder.pcd  tool_box.pcd
src/simulation/: baxter_kinect.urdf.xacro  baxter_world_with_table.launch
srv/: ObjectCloud.srv
test/: cluster_euclid.cpp  cluster_extraction.cpp  correspondence_grouping.cpp  example_extract_clusters_normals.cpp  normal_estimation.cpp  planar_segmentation.cpp
test_urdf/urdf/sensors/: kinect.urdf.xacro  kinect_gazebo.xacro  kinect_properties.urdf.xacro
urdf/: kinect.urdf.xacro  kinect_base.urdf.xacro
worlds/: kinect_with_table.world
